--- a/playbooks/oracle_release_update/playbook.yml
+++ b/playbooks/oracle_release_update/playbook.yml
@@ -1,38 +1,35 @@
 ---
-# Run Release Update Patching
-- hosts: "{{ target_hosts }}"
-  gather_facts: no
-  become: yes
-  become_user: oracle
-  roles:
-    - oracle_release_update
+# # Run Release Update Patching
+# - hosts: "{{ target_hosts }}"
+#   gather_facts: no
+#   become: yes
+#   become_user: oracle
+#   roles:
+#     - oracle_release_update
 
-# Update OEM Targets after Switch Clone Phase of Patching
-- hosts: "{{ target_hosts }}"
-  gather_facts: no
-  become: yes
-  become_user: oracle
-  roles:
-     - { role: update_oem, when: apply_mode == 'switch-clone' and (not pingoms.failed | bool)}
+# # Update OEM Targets after Switch Clone Phase of Patching
+# - hosts: "{{ target_hosts }}"
+#   gather_facts: no
+#   become: yes
+#   become_user: oracle
+#   roles:
+#      - { role: update_oem, when: apply_mode == 'switch-clone' and (not pingoms.failed | bool)}
 
 # Update OEM Metrics for Newly Added Targets
+# - hosts: "{{ target_hosts }}"
+#   gather_facts: no
+#   become: yes
+#   become_user: oracle
+#   roles:
+#      - { role: "{{ playbook_dir }}/../delius_oem_metrics_setup", when: apply_mode == 'switch-clone' and (not pingoms.failed | bool)}
+
+
 - hosts: "{{ target_hosts }}"
   gather_facts: no
   become: yes
   become_user: oracle
-
-  tasks:
-
-    - name: Link OEM Metrics Setup for Use as a Role
-      shell: |
-             ln -s ../delius_oem_metrics_setup/delius_oem_metrics_setup ~/.ansible/roles/delius_oem_metrics_setup
-      delegate_to: localhost
-      become: no
-      run_once: true
-
-    - name: Update OEM Metrics for Newly Added Targets
-      ansible.builtin.include_role:
-          name: delius_oem_metrics_setup
-      when: 
-         - apply_mode == 'switch-clone' 
-         - not pingoms.failed | bool
+  roles:
+     - { role: "{{ playbook_dir }}/../delius_oem_metrics_setup/delius_oem_metrics_setup" }
+  vars:
+     target_gi_home: /u01/app/grid/product/19.22.0/grid
+     target_db_home: /u01/app/oracle/product/19.22.0/db
