--- a/playbooks/oracle_release_update/playbook.yml
+++ b/playbooks/oracle_release_update/playbook.yml
@@ -23,13 +23,26 @@
 #   roles:
 #      - { role: "{{ playbook_dir }}/../delius_oem_metrics_setup", when: apply_mode == 'switch-clone' and (not pingoms.failed | bool)}
 
-
+# Update OEM Metrics for Newly Added Targets
 - hosts: "{{ target_hosts }}"
   gather_facts: no
   become: yes
   become_user: oracle
-  roles:
-     - { role: "{{ playbook_dir }}/../delius_oem_metrics_setup/delius_oem_metrics_setup" }
-  vars:
-     target_gi_home: /u01/app/grid/product/19.22.0/grid
-     target_db_home: /u01/app/oracle/product/19.22.0/db
+
+  tasks:
+
+    - name: Link OEM Metrics Setup for Use as a Role
+      shell: |
+            pwd
+            mkdir -p ~/.ansible/roles
+            ln -sf {{ playbook_dir }}/../delius_oem_metrics_setup/delius_oem_metrics_setup ~/.ansible/roles/delius_oem_metrics_setup
+      delegate_to: localhost
+      become: no
+      run_once: true
+
+    - name: Update OEM Metrics for Newly Added Targets
+      ansible.builtin.include_role:
+          name: delius_oem_metrics_setup
+      # when: 
+      #   - apply_mode == 'switch-clone' 
+      #   - not pingoms.failed | bool
