--- a/playbooks/oracle_release_update/playbook.yml
+++ b/playbooks/oracle_release_update/playbook.yml
@@ -34,15 +34,21 @@
     - name: Link OEM Metrics Setup for Use as a Role
       shell: |
             pwd
-            mkdir -p ~/.ansible/roles
-            ln -sf {{ playbook_dir }}/../delius_oem_metrics_setup/delius_oem_metrics_setup ~/.ansible/roles/delius_oem_metrics_setup
-            ls -l
-            ls -la /github/home
-            ls -la /github/home/.ansible
-            ls -la /github/home/.ansible/roles
-            echo
-            echo
-            ls -la /github/home/.ansible/roles/delius_oem_metrics_setup
+            mkdir "{{ playbook_dir }}/roles"
+            ln -sfv {{ playbook_dir }}/../delius_oem_metrics_setup/delius_oem_metrics_setup {{ playbook_dir }}/roles/delius_oem_metrics_setup
+            # ls -l
+            # ls -la /github/home
+            # ls -la /github/home/.ansible
+            # ls -la /github/home/.ansible/roles
+            # echo
+            # echo
+            # ls -la /github/home/.ansible/roles/delius_oem_metrics_setup
+            # echo
+            # ls -la /github/home/.ansible/roles/delius_oem_metrics_setup/tasks
+            # echo
+            # ls -l /__w/hmpps-delius-operational-automation/hmpps-delius-operational-automation/operations/playbooks/oracle_release_update/../delius_oem_metrics_setup/delius_oem_metrics_setup
+            # echo
+            # ls -l /__w/hmpps-delius-operational-automation/hmpps-delius-operational-automation/operations/playbooks/oracle_release_update/../delius_oem_metrics_setup/delius_oem_metrics_setup/tasks
       delegate_to: localhost
       become: no
       run_once: true
