--- a/.github/workflows/oracle-db-release-update.yml
+++ b/.github/workflows/oracle-db-release-update.yml
@@ -127,10 +127,20 @@ jobs:
           sparse-checkout: |
             ansible/hosts
             ansible/group_vars
-            ansible/roles/secretsmanager-passwords
-            ansible/roles/get-ec2-facts
-            ansible/roles/get-modernisation-platform-facts
           path: inventory
+          ref: ${{ github.event.inputs.SourceConfigVersion }}
+          fetch-depth: 0
+
+      - name: Checkout Role From modernisation-platform-configuration-management
+        uses: actions/checkout@v4
+        with:
+          repository: ministryofjustice/modernisation-platform-configuration-management
+          sparse-checkout-cone-mode: false
+          sparse-checkout: |
+                ansible/roles/secretsmanager-passwords
+                ansible/roles/get-ec2-facts
+                ansible/roles/get-modernisation-platform-facts
+          path: roles
           ref: ${{ github.event.inputs.SourceConfigVersion }}
           fetch-depth: 0
 
