--- a/.github/workflows/oracle-db-release-update.yml
+++ b/.github/workflows/oracle-db-release-update.yml
@@ -144,22 +144,6 @@ jobs:
           ref: ${{ github.event.inputs.SourceConfigVersion }}
           fetch-depth: 0
 
-      - name: Install yq
-        uses: dcarbone/install-yq-action@v1.1.1
-        with:
-            download-compressed: true
-            version: "v4.35.1"
-            force: true
-
-      - name: Count Standby Databases Configured In Ansible Inventory
-        id: countstandbydbs
-        working-directory: ${{ env.inventory }}
-        run: |
-            database_environment="environment_name_$(echo ${{ github.event.inputs.TargetEnvironment}} | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')"
-            database_type=$(echo ${{ github.event.inputs.TargetHost }} | cut -d_ -f1)
-            high_availability_count=$(yq .high_availability_count.${database_type} group_vars/${database_environment}_all.yml)
-            echo "high_availability_count=$high_availability_count"
-
       - name: Checkout From hmpps-delius-operational-automation
         uses: actions/checkout@v4
         with:
@@ -192,7 +176,9 @@ jobs:
         run: |
           export ANSIBLE_CONFIG=$ansible_config
           # Link the checked out configuration roles to somewhere Ansible will be able to find them
-          ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_release_update/roles
+          ln -svf $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_release_update/roles
+          # Link the OEM Metrics Setup Play to allow it to be used as a role
+          ln -svf $PWD/operations/playbook/delius_oem_metrics_setup/delius_oem_metrics_setup $PWD/operations/playbooks/oracle_release_update/roles
           $command -i $inventory \
           -e target_hosts=${{ steps.prepareinventorynames.outputs.hosts }} \
           -e apply_mode=${{ github.event.inputs.ApplyMode }} \
