--- a/.github/workflows/oracle-db-release-update.yml
+++ b/.github/workflows/oracle-db-release-update.yml
@@ -1,5 +1,4 @@
 name: "Oracle: Release Update"
-run-name: "Oracle: ${{ github.event.inputs.TargetEnvironment }}-release-update"
 on:
   workflow_dispatch:
     inputs:
@@ -91,6 +90,8 @@ on:
         description: "Source version for the modernisation-platform-configuration-management. Enter a pull request, branch, commit ID, tag, or reference."
         type: string
         default: "main"
+
+run-name: "Oracle: ${{ format('{0}-release-update-{1}-branch-{2}',github.event.inputs.TargetEnvironment,tojson(inputs),github.ref_name) }}"
 
 env:
   ansible_config: operations/playbooks/ansible.cfg
