--- a/.github/workflows/ldap-user-expiry.yaml
+++ b/.github/workflows/ldap-user-expiry.yaml
@@ -45,7 +45,7 @@ jobs:
                 json-file-path: docker/ldap-automation/task-def.json
                 # Multi-line string containing key/value pairs of JSON property paths and desired property values
                 field-value-pairs: |
-                    $.containerDefinitions[0].command: ["ldap-automation", "user-expiry", "${{ github.event.inputs.user-role-list }}"]
+                    $.containerDefinitions[0].command: ["ldap-automation", "user-expiry"]
                   
                     $.executionRoleArn: "arn:aws:iam::${{vars.AWS_ACCOUNT_ID}}:role/${{ github.event.inputs.environment }}-ldap-ecs-task-exec"
                     $.taskRoleArn: "arn:aws:iam::${{vars.AWS_ACCOUNT_ID}}:role/${{ github.event.inputs.environment }}-ldap-ecs-task"
