cron schedule added for user expiry

--- a/.github/workflows/ldap-user-expiry.yaml
+++ b/.github/workflows/ldap-user-expiry.yaml
@@ -9,6 +9,9 @@ on:
               - "dev"
               - "test"
   workflow_call:
+    inputs:
+        environment:
+            type: string
     
 jobs:
     deploy:
