Remove double quotes

--- a/playbooks/delius_oem_metrics_setup/delius_oem_metrics_setup/tasks/configure_database_credentials.yml
+++ b/playbooks/delius_oem_metrics_setup/delius_oem_metrics_setup/tasks/configure_database_credentials.yml
@@ -17,7 +17,7 @@
       block:
         - name: Copy Create Named Credential script
           template:
-            src: create_named_credential.sh.j2"
+            src: create_named_credential.sh.j2
             dest: "{{ stage }}/create_named_credential.sh"
             mode: "0700"
 
