--- a/.github/workflows/ldap-user-expiry-cron.yml
+++ b/.github/workflows/ldap-user-expiry-cron.yml
@@ -13,4 +13,4 @@ jobs:
             environment: ["dev"]
     uses: ./.github/workflows/ldap-user-expiry.yaml
     with: 
-        environment: ${{matrix.environment}}-preapproved
+        environment: delius-core-${{matrix.environment}}-preapproved
