--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -8,6 +8,7 @@ on:
         required: true
         type: choice
         options:
+          - "delius-core-dev-preapproved"
           - "delius-core-dev"
           - "delius-core-test"
           - "delius-core-training"
