--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -9,12 +9,11 @@ on:
         type: choice
         options:
           - "delius-core-dev-preapproved"
-          - "delius-core-dev"
-          - "delius-core-test"
-          - "delius-core-training"
-          - "delius-core-stage"
-          - "delius-core-pre-prod"
-          - "delius-core-prod"
+          - "delius-core-test-preapproved"
+          - "delius-core-training-preapproved"
+          - "delius-core-stage-preapproved"
+          - "delius-core-pre-prod-preapproved"
+          - "delius-core-prod-preapproved"
       TargetHost:
         description: "Backup target host"
         required: true
