Add Interim Patching

--- a/.github/workflows/oracle-db-release-update.yml
+++ b/.github/workflows/oracle-db-release-update.yml
@@ -153,6 +153,7 @@ jobs:
           sparse-checkout: |
                            playbooks/oracle_release_update
                            playbooks/delius_oem_metrics_setup
+                           playbooks/oracle_interim_patch
                            common/*
                            ansible.cfg
           path: operations
@@ -179,6 +180,8 @@ jobs:
           export ANSIBLE_CONFIG=$ansible_config
           # Link the checked out configuration roles to somewhere Ansible will be able to find them
           ln -svf $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_release_update/roles
+          # Link the Interim Patching Play to allow it to be used as a role
+          ln -svf $PWD/operations/playbooks/oracle_interim_patch/oracle_interim_patch $PWD/roles/ansible/roles/oracle_interim_patch
           # Link the OEM Metrics Setup Play to allow it to be used as a role
           ln -svf $PWD/operations/playbooks/delius_oem_metrics_setup/delius_oem_metrics_setup $PWD/roles/ansible/roles/delius_oem_metrics_setup
           $command -i $inventory \
