--- a/.github/workflows/oracle-db-statistics.yml
+++ b/.github/workflows/oracle-db-statistics.yml
@@ -98,9 +98,9 @@ jobs:
 
       - name: Prepare Git Options
         run: |
-          name=$(git config --get user.name)
-          email=$(git config --get user.email)
-          echo -e "$name $email"
+          # name=$(git config --get user.name)
+          # email=$(git config --get user.email)
+          # echo -e "$name $email"
           exit 0
 
       - name: Prepare Target Name
