Change env variable

--- a/.github/workflows/oracle-db-statistics.yml
+++ b/.github/workflows/oracle-db-statistics.yml
@@ -150,7 +150,7 @@ jobs:
 
       - name: Start Ansible Gather Delius Statistics
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
         shell: bash
         run: |
           export ANSIBLE_CONFIG=$ansible_config
