Delegate to localhost

--- a/playbooks/oracle_statistics/oracle_statistics/tasks/main.yml
+++ b/playbooks/oracle_statistics/oracle_statistics/tasks/main.yml
@@ -2,6 +2,8 @@
 
 - debug:
     msg: "'{{ lookup('ansible.builtin.env', 'GITHUB_TOKEN') }}'"
+  delegate_to: localhost
+  become: no
 
 - name: Test
   shell: |
