--- a/.github/workflows/oracle-db-statistics.yml
+++ b/.github/workflows/oracle-db-statistics.yml
@@ -150,11 +150,14 @@ jobs:
 
       - name: Start Ansible Gather Delius Statistics
         env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
         shell: bash
         run: |
           export $GITHUB_TOKEN
+          export $GH_TOKEN
           echo $GITHUB_TOKEN
+          echo $GH_TOKEN
           export ANSIBLE_CONFIG=$ansible_config
           $command -i $inventory \
           -e hosts=${{ steps.preparetargetname.outputs.TargetHost }} \
