--- a/playbooks/oracle_statistics/oracle_statistics/tasks/main.yml
+++ b/playbooks/oracle_statistics/oracle_statistics/tasks/main.yml
@@ -5,11 +5,17 @@
   delegate_to: localhost
   become: no
 
+- debug:
+    msg: "'{{ lookup('ansible.builtin.env', 'GH_TOKEN') }}'"
+  delegate_to: localhost
+  become: no
+
 - name: Test
   shell: |
-    echo ${GITHUB_TOKEN} | gh auth login --with-token
+    echo ${GH_TOKEN} | gh auth login --with-token
     gh workflow run oracle-db-statistics.yml --ref DBA-651 -f TargetEnvironment=delius-core-dev
   environment:
+    GH_TOKEN:  "'{{ lookup('ansible.builtin.env', 'GH_TOKEN') }}'"
     GITHUB_TOKEN: "'{{ lookup('ansible.builtin.env', 'GITHUB_TOKEN') }}'"
   register: start_statistics_export
   delegate_to: localhost
